--- a/Bai 4/Bai tap luyen tap vong lap 1/bai2.html
+++ b/Bai 4/Bai tap luyen tap vong lap 1/bai2.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Dieu chinh nhiet do</title>
 </head>
 <body>
-$END$
+<script>
+var nhietdo = parseInt(prompt("Nhap nhiet do "));
+if (nhietdo <20)
+    document.write("Tang nhiet do");
+else if (nhietdo<=100)
+    document.write("Binh thuong");
+    else
+    document.write("Giam nhiet do");
+</script>
 </body>
 </html>
