--- a/Bai 4/Bai tap luyen tap vong lap 1/bai1.html
+++ b/Bai 4/Bai tap luyen tap vong lap 1/bai1.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Dem tu 1 den 100, dem den 99 xuat hien hoan thanh</title>
 </head>
 <body>
-$END$
+<script>
+var count;
+for (count=1;count<100;count++){
+    if (count===99)
+        document.write("Hoan thanh");
+}
+</script>
 </body>
 </html>
