--- a/Bai 4/Bai tap luyen tap vong lap 1/bai3.html
+++ b/Bai 4/Bai tap luyen tap vong lap 1/bai3.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Hien thi 20 so dau tien fibonaci</title>
 </head>
 <body>
-$END$
+<script>
+var a=1;
+var b=0;//f(2)
+var sum;
+for (var i=1;i<=20;i++){
+    sum = a;
+    a = a + b;
+    b = sum;
+    document.write(sum+"<br>");
+}
+</script>
 </body>
 </html>
