--- a/Bai 4/Bai tap luyen tap vong lap 1/bai5.html
+++ b/Bai 4/Bai tap luyen tap vong lap 1/bai5.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Tong 20 so dau tien cua day fibonaci</title>
 </head>
 <body>
-$END$
+<script>
+    var a=1;
+    var b=0;//f(2)
+    var sum,sum1=0;
+    for (var i=1;i<=20;i++){
+        sum = a;
+        a = a + b;
+        b = sum;
+        sum1=sum1+sum;
+    }
+    document.write(sum1+"<br>");
+</script>
 </body>
 </html>
