--- a/Bai 4/Bai tap luyen tap vong lap 2/bai1.html
+++ b/Bai 4/Bai tap luyen tap vong lap 2/bai1.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>In day fibonaci 10 so dau tien</title>
 </head>
 <body>
-$END$
+<script>
+    var a=1,b=0,sum=0;
+    for (var i=1;i<=10;i++){
+        sum=a+b;
+        a=b;
+        b=sum;
+        document.write(sum+"<br>");
+    }
+</script>
 </body>
 </html>
