--- a/Bai 4/Bai tap luyen tap vong lap 2/bai3.html
+++ b/Bai 4/Bai tap luyen tap vong lap 2/bai3.html
@@ -2,9 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>In tam giac vuong</title>
 </head>
 <body>
-$END$
+<script>
+    for (var i=1;i<=5;i++){
+        for (var j=1;j<=i;j++){
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+    document.write("<br>");
+
+    for (var i=1;i<=5;i++){
+        for (var j=0;j<=5-i;j++){
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+    document.write("<br>");
+    for (var i=1;i<=5;i++){
+        var j=1;
+        while (j<=i) {
+           document.write("&nbsp;&nbsp;");
+           j++;
+        }
+        for (var j; j <=6;j++){
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+     document.write("<br>");
+        for (var i=1;i<=5;i++){
+            var j=5;
+            while (j>i) {
+               document.write("&nbsp;&nbsp;");
+              var a= j--;
+            }
+            for (var j;j<=i+i-1;j++){
+                document.write("*");
+            }
+            document.write("<br>");
+        }
+</script>
 </body>
 </html>
