--- a/Bai 5/Thuc hanh tao va thao tat voi mang/thuchanh.html
+++ b/Bai 5/Thuc hanh tao va thao tat voi mang/thuchanh.html
@@ -7,11 +7,9 @@
 <body>
     <h1>Sample Screen:</h1>
 
-    <form>
          <input type="text" id="text">
          <input type="button" value="Add"id="btnAdd" onclick="addElement()">
          <input type="button" value="Display" id="btnDisplay" onclick="displayElement()">
-    </form>
     <div id="show">Show</div>
 <script>
     var x=0;//Chi so mang
@@ -23,10 +21,10 @@
         document.getElementById("text").value="";
     }
     function displayElement() {
-        var e="<hr/>";
+        var e="<hr>";
         for (var i=0;i<arr.length;i++){
-         e=e+arr[i]+ '<br/>';
-         document.getElementById("show").innerText=e;
+         e= e + arr[i]+ "<br/>";
+         document.getElementById("show").innerHTML=e;
      }
     }
 </script>
