--- a/Bai 7/Bai tap Xay dung lop mo ta dien thoai/Mobile.html
+++ b/Bai 7/Bai tap Xay dung lop mo ta dien thoai/Mobile.html
@@ -16,8 +16,8 @@
             this.PIN = pin;//pin
             this.STATUS = status;//Trang thai dien thoai
             this.WRITE = write;//vung nho tin nhan dang soan
-            this.INBOX = [];//vung nho tin nhan nhan
-            this.OUTBOX = [];//vung nho tin nhan gui 
+            this.INBOX = "";//vung nho tin nhan nhan
+            this.OUTBOX = "";//vung nho tin nhan gui 
             //Chuc nang-Phuong thuc
             this.checkStatus = function () { //Kiem tra dien thoai bat hay tat
                 if (this.STATUS)
